决策树学习过程，这部分可以参考《统计学习方法》 CH05，计算实例来自《Web数据挖掘》

--- a/CH03 Decision Tree.ipynb
+++ b/CH03 Decision Tree.ipynb
@@ -13,7 +13,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "http://en.wikipedia.org/wiki/ID3_algorithm\n"
+    "http://en.wikipedia.org/wiki/ID3_algorithm\n",
+    "- 决策树学习通常包含三个步骤:特征选择，决策树生成，决策树修剪[Lihang P55]\n"
    ]
   },
   {
@@ -2322,7 +2323,9 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "dt_lenses = DecisionTreeClassifier(criterion=\"gini\")"
