Tree Map Fig 3-1

--- a/CH03 Decision Tree.ipynb
+++ b/CH03 Decision Tree.ipynb
@@ -14,7 +14,200 @@
    "metadata": {},
    "source": [
     "http://en.wikipedia.org/wiki/ID3_algorithm\n",
-    "- 决策树学习通常包含三个步骤:特征选择，决策树生成，决策树修剪[Lihang P55]\n"
+    "- 决策树学习通常包含三个步骤: 特征选择，决策树生成，决策树修剪[Lihang P55]\n",
+    "- 决策树模型\n",
+    "    - if-then规则\n",
+    "    - 条件概率分布\n",
+    "\n",
+    "信息定义 $$l(x_i)=-log_2p(x_i)$$\n",
+    "熵定义 $$H=-\\sum_{i=1}^{n}p(x_i)log_2p(x_i)$$\n",
+    "决策树学习的损失函数通常是正则化的极大似然函数。\n",
+    "\n",
+    "决策树的学习策略是以损失函数为目标函数的最小化。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Tree Map Demo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<script>\n",
+       "    require.config({\n",
+       "        paths: {\n",
+       "            'echarts': '/nbextensions/echarts/echarts.min'\n",
+       "        }\n",
+       "    });\n",
+       "</script>\n",
+       "    <div id=\"7c65edc473524e5c93205dec133a7338\" style=\"width:800px;height:500px;\"></div>\n",
+       "\n",
+       "\n",
+       "<script>\n",
+       "    require(['echarts'], function(echarts) {\n",
+       "        \n",
+       "var myChart_7c65edc473524e5c93205dec133a7338 = echarts.init(document.getElementById('7c65edc473524e5c93205dec133a7338'), 'dark', {renderer: 'canvas'});\n",
+       "\n",
+       "var option_7c65edc473524e5c93205dec133a7338 = {\n",
+       "    \"title\": [\n",
+       "        {\n",
+       "            \"text\": \"\\u51b3\\u7b56\\u6811\",\n",
+       "            \"subtext\": \"\\u53ef\\u4ee5\\u901a\\u8fc7\\u4e0b\\u94bb\\u7684\\u65b9\\u5f0f\\u5c55\\u793a\\u51b3\\u7b56\\u7684\\u8fc7\\u7a0b\\uff0c\\u4f8b\\u5b50\\u53c2\\u8003MLiA\\u4e2d\\u56fe3-1\",\n",
+       "            \"left\": \"auto\",\n",
+       "            \"top\": \"auto\",\n",
+       "            \"textStyle\": {\n",
+       "                \"fontSize\": 18\n",
+       "            },\n",
+       "            \"subtextStyle\": {\n",
+       "                \"fontSize\": 12\n",
+       "            }\n",
+       "        }\n",
+       "    ],\n",
+       "    \"toolbox\": {\n",
+       "        \"show\": true,\n",
+       "        \"orient\": \"vertical\",\n",
+       "        \"left\": \"95%\",\n",
+       "        \"top\": \"center\",\n",
+       "        \"feature\": {\n",
+       "            \"saveAsImage\": {\n",
+       "                \"show\": true,\n",
+       "                \"title\": \"\\u4e0b\\u8f7d\\u56fe\\u7247\"\n",
+       "            },\n",
+       "            \"restore\": {\n",
+       "                \"show\": true\n",
+       "            },\n",
+       "            \"dataView\": {\n",
+       "                \"show\": true\n",
+       "            }\n",
+       "        }\n",
+       "    },\n",
+       "    \"series_id\": 135630,\n",
+       "    \"tooltip\": {\n",
+       "        \"trigger\": \"item\",\n",
+       "        \"triggerOn\": \"mousemove|click\",\n",
+       "        \"axisPointer\": {\n",
+       "            \"type\": \"line\"\n",
+       "        },\n",
+       "        \"textStyle\": {\n",
+       "            \"fontSize\": 14\n",
+       "        },\n",
+       "        \"backgroundColor\": \"rgba(50,50,50,0.7)\",\n",
+       "        \"borderColor\": \"#333\",\n",
+       "        \"borderWidth\": 0\n",
+       "    },\n",
+       "    \"series\": [\n",
+       "        {\n",
+       "            \"type\": \"treemap\",\n",
+       "            \"name\": \"\\u53d1\\u9001\\u90ae\\u4ef6\\u57df\\u540d\\u5730\\u5740\\u4e3a:\\ud83d\\udd17\\ud83d\\udd17\\ud83d\\udd17\\ud83d\\udd17\",\n",
+       "            \"data\": [\n",
+       "                {\n",
+       "                    \"value\": 50,\n",
+       "                    \"name\": \"\\u662f->\\u65e0\\u804a\\u65f6\\u9700\\u8981\\u9605\\u8bfb\"\n",
+       "                },\n",
+       "                {\n",
+       "                    \"value\": 50,\n",
+       "                    \"name\": \"\\u5426->\\u662f\\u5426\\u5305\\u542b\\u5355\\u8bcd\\u66f2\\u68cd\\u7403\",\n",
+       "                    \"children\": [\n",
+       "                        {\n",
+       "                            \"value\": 50,\n",
+       "                            \"name\": \"\\u662f->\\u9700\\u8981\\u53ca\\u65f6\\u5904\\u7406\\u7684\\u670b\\u53cb\\u90ae\\u4ef6\"\n",
+       "                        },\n",
+       "                        {\n",
+       "                            \"value\": 50,\n",
+       "                            \"name\": \"\\u5426->\\u5783\\u573e\\u90ae\\u4ef6\"\n",
+       "                        }\n",
+       "                    ]\n",
+       "                }\n",
+       "            ],\n",
+       "            \"label\": {\n",
+       "                \"normal\": {\n",
+       "                    \"show\": true,\n",
+       "                    \"position\": \"inside\",\n",
+       "                    \"textStyle\": {\n",
+       "                        \"fontSize\": 12\n",
+       "                    }\n",
+       "                },\n",
+       "                \"emphasis\": {\n",
+       "                    \"show\": true,\n",
+       "                    \"textStyle\": {\n",
+       "                        \"fontSize\": 12\n",
+       "                    }\n",
+       "                }\n",
+       "            },\n",
+       "            \"leafDepth\": 1,\n",
+       "            \"drillDownIcon\": \"\\u25b6\",\n",
+       "            \"visibleMin\": 10,\n",
+       "            \"seriesId\": 135630\n",
+       "        }\n",
+       "    ],\n",
+       "    \"legend\": [\n",
+       "        {\n",
+       "            \"data\": [\n",
+       "                \"\\u53d1\\u9001\\u90ae\\u4ef6\\u57df\\u540d\\u5730\\u5740\\u4e3a:\\ud83d\\udd17\\ud83d\\udd17\\ud83d\\udd17\\ud83d\\udd17\"\n",
+       "            ],\n",
+       "            \"selectedMode\": \"multiple\",\n",
+       "            \"show\": true,\n",
+       "            \"left\": \"center\",\n",
+       "            \"top\": \"top\",\n",
+       "            \"orient\": \"horizontal\",\n",
+       "            \"textStyle\": {\n",
+       "                \"fontSize\": 12\n",
+       "            }\n",
+       "        }\n",
+       "    ],\n",
+       "    \"color\": []\n",
+       "};\n",
+       "myChart_7c65edc473524e5c93205dec133a7338.setOption(option_7c65edc473524e5c93205dec133a7338);\n",
+       "\n",
+       "    });\n",
+       "</script>\n"
+      ],
+      "text/plain": [
+       "<pyecharts.charts.treemap.TreeMap at 0x18ab2ec61d0>"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from pyecharts import TreeMap\n",
+    "\n",
+    "data = [\n",
+    "    {\n",
+    "        \"value\": 50,\n",
+    "        \"name\": \"是->无聊时需要阅读\",\n",
+    "    },\n",
+    "    {\n",
+    "        \"value\": 50,\n",
+    "        \"name\": \"否->是否包含单词曲棍球\",\n",
+    "        \"children\": [\n",
+    "            {\"value\": 50,\n",
+    "             \"name\": \"是->需要及时处理的朋友邮件\",\n",
+    "             },\n",
+    "            {\n",
+    "                \"value\": 50,\n",
+    "                \"name\": \"否->垃圾邮件\",\n",
+    "            },\n",
+    "\n",
+    "        ]\n",
+    "    },\n",
+    "\n",
+    "]\n",
+    "\n",
+    "treemap = TreeMap(\"决策树\",\"可以通过下钻的方式展示决策的过程，例子参考MLiA中图3-1\", width=800, height=500)\n",
+    "treemap.use_theme(\"dark\")\n",
+    "treemap.add(\"发送邮件域名地址为:🔗🔗🔗🔗\", data, is_label_show=True, label_pos='inside', treemap_left_depth=1)\n",
+    "treemap"
    ]
   },
   {
@@ -1742,6 +1935,261 @@
    ],
    "source": [
     "createPlot(lenseTree)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<script>\n",
+       "    require.config({\n",
+       "        paths: {\n",
+       "            'echarts': '/nbextensions/echarts/echarts.min'\n",
+       "        }\n",
+       "    });\n",
+       "</script>\n",
+       "    <div id=\"632599f2e2284a74bbb1f897e69ed483\" style=\"width:800px;height:500px;\"></div>\n",
+       "\n",
+       "\n",
+       "<script>\n",
+       "    require(['echarts'], function(echarts) {\n",
+       "        \n",
+       "var myChart_632599f2e2284a74bbb1f897e69ed483 = echarts.init(document.getElementById('632599f2e2284a74bbb1f897e69ed483'), 'dark', {renderer: 'canvas'});\n",
+       "\n",
+       "var option_632599f2e2284a74bbb1f897e69ed483 = {\n",
+       "    \"title\": [\n",
+       "        {\n",
+       "            \"text\": \"\\u9690\\u5f62\\u773c\\u955c\\u5206\\u7c7b\\u51b3\\u7b56\\u6811\",\n",
+       "            \"left\": \"auto\",\n",
+       "            \"top\": \"auto\",\n",
+       "            \"textStyle\": {\n",
+       "                \"fontSize\": 18\n",
+       "            },\n",
+       "            \"subtextStyle\": {\n",
+       "                \"fontSize\": 12\n",
+       "            }\n",
+       "        }\n",
+       "    ],\n",
+       "    \"toolbox\": {\n",
+       "        \"show\": true,\n",
+       "        \"orient\": \"vertical\",\n",
+       "        \"left\": \"95%\",\n",
+       "        \"top\": \"center\",\n",
+       "        \"feature\": {\n",
+       "            \"saveAsImage\": {\n",
+       "                \"show\": true,\n",
+       "                \"title\": \"\\u4e0b\\u8f7d\\u56fe\\u7247\"\n",
+       "            },\n",
+       "            \"restore\": {\n",
+       "                \"show\": true\n",
+       "            },\n",
+       "            \"dataView\": {\n",
+       "                \"show\": true\n",
+       "            }\n",
+       "        }\n",
+       "    },\n",
+       "    \"series_id\": 6809409,\n",
+       "    \"tooltip\": {\n",
+       "        \"trigger\": \"item\",\n",
+       "        \"triggerOn\": \"mousemove|click\",\n",
+       "        \"axisPointer\": {\n",
+       "            \"type\": \"line\"\n",
+       "        },\n",
+       "        \"textStyle\": {\n",
+       "            \"fontSize\": 14\n",
+       "        },\n",
+       "        \"backgroundColor\": \"rgba(50,50,50,0.7)\",\n",
+       "        \"borderColor\": \"#333\",\n",
+       "        \"borderWidth\": 0\n",
+       "    },\n",
+       "    \"series\": [\n",
+       "        {\n",
+       "            \"type\": \"treemap\",\n",
+       "            \"name\": \"tearRate\",\n",
+       "            \"data\": [\n",
+       "                {\n",
+       "                    \"value\": 50,\n",
+       "                    \"name\": \"reduced->no lenses\"\n",
+       "                },\n",
+       "                {\n",
+       "                    \"value\": 50,\n",
+       "                    \"name\": \"normal->astigmatic\",\n",
+       "                    \"children\": [\n",
+       "                        {\n",
+       "                            \"value\": 50,\n",
+       "                            \"name\": \"yes->prescript\",\n",
+       "                            \"children\": [\n",
+       "                                {\n",
+       "                                    \"value\": 50,\n",
+       "                                    \"name\": \"hyper->age\",\n",
+       "                                    \"children\": [\n",
+       "                                        {\n",
+       "                                            \"value\": 30,\n",
+       "                                            \"name\": \"pre->nolenses\"\n",
+       "                                        },\n",
+       "                                        {\n",
+       "                                            \"value\": 30,\n",
+       "                                            \"name\": \"presbyopic->nolenses\"\n",
+       "                                        },\n",
+       "                                        {\n",
+       "                                            \"value\": 30,\n",
+       "                                            \"name\": \"young->hard\"\n",
+       "                                        }\n",
+       "                                    ]\n",
+       "                                },\n",
+       "                                {\n",
+       "                                    \"value\": 50,\n",
+       "                                    \"name\": \"myope->hard\"\n",
+       "                                }\n",
+       "                            ]\n",
+       "                        },\n",
+       "                        {\n",
+       "                            \"value\": 50,\n",
+       "                            \"name\": \"no->age\",\n",
+       "                            \"children\": [\n",
+       "                                {\n",
+       "                                    \"value\": 30,\n",
+       "                                    \"name\": \"pre->soft\"\n",
+       "                                },\n",
+       "                                {\n",
+       "                                    \"value\": 30,\n",
+       "                                    \"name\": \"presbyopic->prescript\",\n",
+       "                                    \"children\": [\n",
+       "                                        {\n",
+       "                                            \"value\": 50,\n",
+       "                                            \"name\": \"hyper->soft\"\n",
+       "                                        },\n",
+       "                                        {\n",
+       "                                            \"value\": 50,\n",
+       "                                            \"name\": \"myope->no lenses\"\n",
+       "                                        }\n",
+       "                                    ]\n",
+       "                                },\n",
+       "                                {\n",
+       "                                    \"value\": 30,\n",
+       "                                    \"name\": \"young->soft\"\n",
+       "                                }\n",
+       "                            ]\n",
+       "                        }\n",
+       "                    ]\n",
+       "                }\n",
+       "            ],\n",
+       "            \"label\": {\n",
+       "                \"normal\": {\n",
+       "                    \"show\": true,\n",
+       "                    \"position\": \"inside\",\n",
+       "                    \"textStyle\": {\n",
+       "                        \"fontSize\": 12\n",
+       "                    }\n",
+       "                },\n",
+       "                \"emphasis\": {\n",
+       "                    \"show\": true,\n",
+       "                    \"textStyle\": {\n",
+       "                        \"fontSize\": 12\n",
+       "                    }\n",
+       "                }\n",
+       "            },\n",
+       "            \"drillDownIcon\": \"\\u25b6\",\n",
+       "            \"visibleMin\": 10,\n",
+       "            \"seriesId\": 6809409\n",
+       "        }\n",
+       "    ],\n",
+       "    \"legend\": [\n",
+       "        {\n",
+       "            \"data\": [\n",
+       "                \"tearRate\"\n",
+       "            ],\n",
+       "            \"selectedMode\": \"multiple\",\n",
+       "            \"show\": true,\n",
+       "            \"left\": \"center\",\n",
+       "            \"top\": \"top\",\n",
+       "            \"orient\": \"horizontal\",\n",
+       "            \"textStyle\": {\n",
+       "                \"fontSize\": 12\n",
+       "            }\n",
+       "        }\n",
+       "    ],\n",
+       "    \"color\": []\n",
+       "};\n",
+       "myChart_632599f2e2284a74bbb1f897e69ed483.setOption(option_632599f2e2284a74bbb1f897e69ed483);\n",
+       "\n",
+       "    });\n",
+       "</script>\n"
+      ],
+      "text/plain": [
+       "<pyecharts.charts.treemap.TreeMap at 0x18ab2ef8588>"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from pyecharts import TreeMap\n",
+    "\n",
+    "data = [\n",
+    "    {\n",
+    "        \"value\": 50,\n",
+    "        \"name\": \"reduced->no lenses\",\n",
+    "    },\n",
+    "    {\n",
+    "        \"value\": 50,\n",
+    "        \"name\": \"normal->astigmatic\",\n",
+    "        \"children\": [\n",
+    "            {\"value\": 50,\n",
+    "             \"name\": \"yes->prescript\",\n",
+    "             \"children\":[\n",
+    "                 {\"value\":50,\n",
+    "                  \"name\": \"hyper->age\",\n",
+    "                  \"children\":[\n",
+    "                      {\"value\":30,\n",
+    "                      \"name\":\"pre->nolenses\"},\n",
+    "                      {\"value\":30,\n",
+    "                      \"name\":\"presbyopic->nolenses\"},\n",
+    "                      {\"value\":30,\n",
+    "                      \"name\":\"young->hard\"}\n",
+    "                  ]\n",
+    "                  },\n",
+    "                 {\n",
+    "                     \"value\":50,\n",
+    "                     \"name\": \"myope->hard\",\n",
+    "                 },\n",
+    "             ]\n",
+    "             },\n",
+    "            {\n",
+    "                \"value\": 50,\n",
+    "                \"name\": \"no->age\",\n",
+    "                \"children\":[\n",
+    "                          {\"value\":30,\n",
+    "                           \"name\":\"pre->soft\"},\n",
+    "                          {\"value\":30,\n",
+    "                           \"name\":\"presbyopic->prescript\",\n",
+    "                       \"children\":[\n",
+    "                                  {\"value\":50,\n",
+    "                                  \"name\":\"hyper->soft\"},\n",
+    "                                  {\"value\":50,\n",
+    "                                  \"name\":\"myope->no lenses\"},\n",
+    "                       ]\n",
+    "                      },\n",
+    "                      {\"value\":30,\n",
+    "                       \"name\":\"young->soft\"}\n",
+    "                ]\n",
+    "            },\n",
+    "\n",
+    "        ]\n",
+    "    },\n",
+    "\n",
+    "]\n",
+    "\n",
+    "treemap = TreeMap(\"隐形眼镜分类决策树\",\"\", width=800, height=500)\n",
+    "treemap.use_theme(\"dark\")\n",
+    "treemap.add(\"tearRate\", data, is_label_show=True, label_pos='inside')\n",
+    "treemap"
    ]
   },
   {
