--- a/CH07 AdaBoost.ipynb
+++ b/CH07 AdaBoost.ipynb
@@ -72,7 +72,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- 各分类器权重不等，每个权重代表对应分类器上一轮迭代的成功度"
+    "- 各分类器权重不等，每个权重代表对应分类器上一轮迭代的成功度\n",
+    "- $\\alpha_m=\\frac{1}{2}log\\frac{1-e_m}{e_m}$ \n",
+    "- $e_m$为分类误差率$e_m=\\sum_{i=1}^{N}P(G_m(x_i)\\ne y_i)=\\sum_{i=1}^{N}w_{mi}I(G_m(x_i)\\ne y_i)$"
    ]
   },
   {
@@ -23886,6 +23888,17 @@
    "metadata": {},
    "source": [
     "### AdaBoostClassifier"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[以下参考](http://scikit-learn.org/stable/modules/ensemble.html#ensemble)\n",
+    "\n",
+    "AdaBoost can be used both for classification and regression problems:\n",
+    "- For multi-class classification, AdaBoostClassifier implements AdaBoost-SAMME and AdaBoost-SAMME.R [ZZRH2009].\n",
+    "- For regression, AdaBoostRegressor implements AdaBoost.R2 [D1997].\n"
    ]
   },
   {
