1 restructure the Decision Tree, refer to L. Breiman, and A. Cutler 's random forest page 2 some PCA related update

--- a/CH13 PCA.ipynb
+++ b/CH13 PCA.ipynb
@@ -819,7 +819,172 @@
     "1. 可以尝试注释部分的不同的组合, 旋转坐标轴看在不同组合的空间里，大概这些类别是可以分开的\n",
     "1. 思考两个问题：\n",
     "    1. 是不是可以把数据的维度降低到3或者更少\n",
-    "    1. 有没有量化的指标可以代替我们可视化的这个过程。\n"
+    "    1. 有没有量化的指标可以代替我们可视化的这个过程\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "X_reduced = PCA(n_components=3).fit_transform(iris.data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_reduced[:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 可视化\n",
+    "from pyecharts import Scatter3D, Grid\n",
+    "names = iris.target_names\n",
+    "# 更改索引看不同的特征选择\n",
+    "feas = combins[0]\n",
+    "target = y\n",
+    "scatter3D_ = Scatter3D(\"\", width=300, height=300)\n",
+    "scatter3D_.use_theme(\"dark\")\n",
+    "for idx in range(3):\n",
+    "    data = X_reduced[target == idx][:, feas]\n",
+    "    scatter3D_.add(names[idx], data)\n",
+    "scatter3D_"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "如何定量的描述4D->3D之后的变化呢？\n",
+    "- 这种可视化，还是seaborn有更好的工具"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_iris = pd.DataFrame(columns=iris.feature_names, data=X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_iris[\"target\"] = y\n",
+    "df_iris.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sns.pairplot(df_iris, hue=\"target\",diag_kind=\"kde\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "以上\n",
+    "* 通过Petal差不多能判断出来是不是类别0，而且通过长和宽差不多都可以独立判断。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_reduced = pd.DataFrame(columns=[\"PC_1\",\"PC_2\",\"PC3_\"], data=X_reduced)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_reduced[\"target\"] = y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sns.pairplot(df_reduced, hue=\"target\",diag_kind=\"kde\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "以上\n",
+    "* 这三个特征下，保持了对种类0的分辨能力"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_reduced = PCA(n_components=2).fit_transform(iris.data)\n",
+    "df_reduced = pd.DataFrame(columns=[\"PC_1\",\"PC_2\"], data=X_reduced)\n",
+    "df_reduced[\"target\"] = y\n",
+    "sns.pairplot(df_reduced, hue=\"target\",diag_kind=\"kde\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_reduced[:10]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "以上，\n",
+    "* 减少到两维特征，主成分1依然有比较好的分辨能力\n",
+    "* PCA的过程是固定的，降到2，还是降到3，降维后的数据是不变的，2，3只选择覆盖信息的大小。\n",
+    "* PCA维数的选择，看选取的维度特征值的和"
    ]
   },
   {
